# configbot

./: .gitignore  README.md  package.xml
dummy_stack/: README.md  camera.py  lidar.py  nav.py  obj_det.py  pointcloud.py  run_all.sh
optim/: Makefile  apply_config.py  gather_info.py  iterate.py  monitor.py  optim_params.py  resource_manager.py  utils.py
optim/src/configbot/: package.xml
optim/src/configbot/scripts/: topic_stats_node.py
optim/src/configbot/srv/: StatsService.srv
